Make the dropdown z-index above the sticky and fixed layers

--- a/packages/component-library/styles/layers.scss
+++ b/packages/component-library/styles/layers.scss
@@ -1,7 +1,7 @@
 $ca-z-index-body: 0;
-$ca-z-index-dropdown: 1000;
 $ca-z-index-sticky: 1020;
 $ca-z-index-fixed: 1030;
+$ca-z-index-dropdown: 1035;
 $ca-z-index-modal-backdrop: 1040;
 $ca-z-index-modal: 1050;
 $ca-z-index-popover: 1060;
